@@ -1,6 +1,7 @@
 0.17.5
  - fix: error handling when connection to server fails on download (#75)
  - fix: '_condensed' suffix for file stem randomly missing in downloads
+ - enh: display DCOR instance title in search bar
  - enh: make icons "grayer" so they work in dark themes as well
  - enh: add `SQLiteKeyJSONDatabase` for persistent metadata storage
  - enh: add `MetaCache` for persistent metadata management
